--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 		<div class="container">
 				<h1>01.09.2017</h1>				
 				<p>Zostałem zatrudniony jako Junior Front End Developer</p>
-				<p>*Najedź na mnie kursorem myszy <i class="demo-icon icon-cursor"></i></p>
+				<p>*Dotknij mnie, lub najedź kursorem myszy <i class="demo-icon icon-cursor"></i></p>
 		</div>
 	</body>
 </html>
